# betty

./: .buildinfo  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  engine.py  genindex.html  index.html  module.py  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  utils.py
_modules/: index.html
_sources/: index.rst.txt
betty/: __init__.py  betty.engine.html  betty.hypergradient.html  betty.logging.html  betty.optim.html  betty.problems.html  config_template.py  configs.py  engine.py  module.py  test_install.py  utils.py  version.txt
docs/: Makefile  betty.hypergradient.rst  betty.optim.rst  betty.problems.rst  betty.rst  build.sh  conf.py  index.rst  modules.rst
examples/: data_reweighting.html  imaml_omniglot.py  logistic_regression.py  logistic_regression_implicit.py  maml.html  maml_miniimagenet.py  maml_omniglot.py  neural_architecture_search.html
hypergrad/: CG_torch.py  __init__.py  diff_optimizers.py  hypergradients.py
hypergradient/: __init__.py  implicit.py  neuman.py
misc/: for.py
optim/: __init__.py  adam.py  adamw.py  patched_optimizer.py  sgd.py
quickstart/: concept.html  concept_architecture.html  concept_autodiff.html  concept_mlo.html  concept_software.html  installation.html
requirements/: requirements.txt  requirements_dev.txt
test/: test_engine.py  test_problem.py  test_regression.py
tests/: engine_test.py  problem_test.py  regression_test.py  test.py
tutorial/: 1_quick_start.py  2_validation.py  3_logging.py  4_memory_optimization.py  (+1 more)
(+260 files in other folders)
