[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "betty-ml"
authors = [{name = "Sang Keun Choe", email = "sangkeuc@andrew.cmu.edu"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: Apache Software License"]
dynamic = ["version", "description"]

requires-python = ">=3.6"

dependencies = [
    "torch>=1.6.*",
]

[tool.flit.module]
name = "betty"

[project.urls]
Home = "https://github.com/leopard-ai/betty"
